Initial menu bar with SVG icons

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,5 +1,7 @@
 cmake_minimum_required(VERSION 3.19)
-project(spotify-fltk)
+
+project(spotify-fltk LANGUAGES CXX)
+set(CMAKE_INCLUDE_CURRENT_DIR ON)
 
 # C++11
 set(CMAKE_CXX_STANDARD 11)
@@ -11,7 +13,8 @@ file(GLOB MAIN_SRC "src/*.[hc]pp")
 add_executable(spotify-fltk ${MAIN_SRC})
 
 set(FLTK_BUILD_TEST OFF)
+set(OPTION_USE_SVG ON)
 add_subdirectory(fltk)
-
-target_link_libraries(spotify-fltk PRIVATE fltk)
 include_directories(fltk)
+
+target_link_libraries(spotify-fltk PRIVATE fltk fltk_images)
