Upload built artifact

--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -39,3 +39,9 @@ jobs:
       shell: bash
       # Execute the build.  You can specify a specific target with "--target <NAME>"
       run: cmake --build . --config $BUILD_TYPE
+
+    - name: Upload Artifact
+      uses: actions/upload-artifact@v2
+      with:
+        name: spotify-fltk
+        path: ${{runner.workspace}}/build/spotify-fltk
